# AxumKit

./: .gitignore  Cargo.toml  README.md  TASKS.md
.github/workflows/: ci.yml
crates/axum-pk/: Cargo.toml
crates/axum-pk-api/: Cargo.toml
crates/axum-pk-api/src/: lib.rs
crates/axum-pk-auth/: Cargo.toml
crates/axum-pk-auth/src/: lib.rs
crates/axum-pk-cli/: Cargo.toml
crates/axum-pk-cli/src/: main.rs
crates/axum-pk-config/: Cargo.toml
crates/axum-pk-config/src/: lib.rs
crates/axum-pk-core/: Cargo.toml
crates/axum-pk-core/src/: config.rs  error.rs  lib.rs  plugin.rs  types.rs
crates/axum-pk-db/: Cargo.toml
crates/axum-pk-db/src/: lib.rs
crates/axum-pk-macros/: Cargo.toml
crates/axum-pk-macros/src/: lib.rs
crates/axum-pk-redis/: Cargo.toml
crates/axum-pk-redis/src/: lib.rs
crates/axum-pk/src/: lib.rs
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/: page.tsx
dashboard/src/app/auth/: page.tsx
dashboard/src/app/database/: page.tsx
dashboard/src/app/frontend/: page.tsx
dashboard/src/app/generate/: page.tsx
dashboard/src/app/models/: page.tsx
dashboard/src/app/monitoring/: page.tsx
dashboard/src/app/plugins/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: FileTree.tsx  PluginCard.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  Toast.tsx
dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  Toggle.tsx  index.ts
dashboard/src/lib/generators/: docker.ts  index.ts  rust.ts  sql.ts  typescript.ts
dashboard/src/store/: dashboard.ts
dashboard/src/types/: index.ts
docs/: INTEGRATION_GUIDE.md
examples/my-project/: Cargo.toml
examples/my-project/src/: main.rs
examples/user-management/: Cargo.toml
examples/user-management/src/: main.rs
