[workspace]
members = [
    "crates/axum-pk-core",
    "crates/axum-pk-macros",
    "crates/axum-pk-db",
    "crates/axum-pk-auth",
    "crates/axum-pk-api",
    "crates/axum-pk-config",
    "crates/axum-pk-redis",
    "crates/axum-pk",
    "crates/axum-pk-cli",
    "examples/user-management",
    "examples/my-project",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohanness16/AxumKit"
authors = ["yohanness16 <yohanness1621@gmail.com>"]
description = "AXUMkit — Modular, pluggable Rust backend framework for rapid web development"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["display", "from"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
