[package]
name = "axum-pk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for AXUMkit — scaffolding, migrations, SDK generation"

[[bin]]
name = "axum-pk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
colored = "2"
walkdir = "2"
regex = "1"
chrono = { workspace = true }
