[package]
name = "axum-pk-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configuration plugin for AXUMkit — layered env/file config"

[dependencies]
axum-pk-core = { path = "../axum-pk-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dotenvy = "0.15"
