[package]
name = "axum-pk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "axum-pk — part of AXUMkit"

[dependencies]
axum-pk-core = { path = "../axum-pk-core" }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
