[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[dependencies]
# AXUMkit — only the plugins you need
axum-pk = { path = "../../crates/axum-pk", features = ["auth", "db", "api", "config"] }

# Runtime + Web framework
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
